- Bugfix: CSplitDockStationHandle did throw an exception on removal, because it could not handle a "null" mode.
! API: Changed the interface "Combiner". The interface has now much more control of how two Dockables are going to be merged, it can now also paint on the station to help the user understand of what is going to happen once the mouse is released
- API: Added "SplitCombiner", a Combiner that creates SplitDockStations instead of StackDockStations.

[v1.1.0p2]
! API: PlaceholderList is now abstract and has more generic arguments. There are two new subclasses: DockablePlaceholderList and PerspectivePlaceholderList.
! API: DockFactory has additional methods and generic arguments to deal with PerspectiveElements
! API: various classes and interfaces needed new generic parameters or needed to be made abstract in order to implement the perspective mechanism. Clients should not be affected (much) by these changes as these classes/interfaces are mostly used in a layer that is not interesting for clients.
- API: Many PreferenceModels now grant access to the Preference objects such that clients can modify them directly
- API: CControl.initExternalizeArea can now be overriden by clients to create a custom ScreenDockStation for externalized items
- Bugfix: DockFrontend no longer stores the same Dockable twice if root-stations are nested
! API: Common now stores the identifier of the working-area which owns a SingleCDockable and changes the working-area property when loading a layout. This is necessary for perspectives which would otherwise work very unintuitive.
- Bugfix: The history of the location of a MultipleCDockable is loaded and applied but only if the MultipleCDockable can be created while loading a persistent layout.
- API: MultipleCDockables now also use placeholders. However, all placeholders for a MultipleCDockable are removed if the MultipleCDockable is closed (unless the MissingCDockableStrategy tells otherwise)  